--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-black.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-white.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>10 Minutes Legal</title>
   </head>
