--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-white.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-only.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>10 Minutes Legal</title>
+    <meta name="description" content="For your non-stop article...Check here" />
   </head>
   <body>
     <div id="root"></div>
